--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,13 @@ main{
 }
 header{
   width: 100%;
-  height: 40vh;
+  height: auto;
   background: #f00;
+}
+.mySwiper img{
+width: 100%;
+height: auto;
+float:left;
 }
 .produtos{
   width: 100%;
